--- a/Assets/Css/Style.css
+++ b/Assets/Css/Style.css
@@ -1,5 +1,13 @@
+.img-cabeçalho {
+    background: #061832;
+
+    width: 200px;
+    height: 100px;
+
+}
+
 .ul-nav-cabeçalho {
-    margin-left: 25%;
+    margin-left: 15%;
 }
 
 .li-nav-cabeçalho {
@@ -8,7 +16,7 @@
 }
 
 .li-nav-cabeçalho a:hover {
-    border-bottom: 5px solid  #303436;
+    border-bottom: 5px solid  #CE9F24;
     padding-bottom: 7px;
 }
 
