--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,21 @@
+*{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+nav {
+    display: flex;
+    justify-content: space-around;
+    border: 5px solid yellow;
+}
+img{
+    position: absolute;
+    display: flex;
+    width:60%;
+    height: 500px;
+    align-content: center;
+    border: 5px solid green;
+    margin-left: 10%;
+}
 .barra-lateral {
     position: absolute;
     right: 5px;
@@ -10,11 +28,17 @@
     flex-flow: column;
     height: 300px;
 }
-
-element.style {
-    border: 5px solid green;
-    padding: 100px 49%;
-}
 .titulo-texto{
-    margin: 0 auto
+    font-weight: 200;
+    color:rgb(15, 129, 129);
+    margin: 0 auto;
+    text-align: center;
+}
+#titulo-texto-tudo{
+    position: absolute;
+    top: 80%;
+    left: 0;
+    width:80%;
+    height: auto;
+    border: 5px solid red;
 }
